logs/repy-v1.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repy_v1'...
Compiling './lib/python3.5/site-packages/repy_v1/darwin_api.py'...
***   File "./lib/python3.5/site-packages/repy_v1/darwin_api.py", line 154
    raise Exception,"Errno:"+str(get_ctypes_errno())+", Error: "+get_ctypes_error_str()
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/emulcomm.py'...
***   File "./lib/python3.5/site-packages/repy_v1/emulcomm.py", line 219
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/emulfile.py'...
***   File "./lib/python3.5/site-packages/repy_v1/emulfile.py", line 89
    raise Exception, 'File "'+filename+'" is open with handle "'+filehandle+'"'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/emulmisc.py'...
***   File "./lib/python3.5/site-packages/repy_v1/emulmisc.py", line 73
    except NotImplementedError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/emultimer.py'...
***   File "./lib/python3.5/site-packages/repy_v1/emultimer.py", line 146
    except thread.error, exp:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/freebsd_api.py'...
***   File "./lib/python3.5/site-packages/repy_v1/freebsd_api.py", line 96
    raise Exception,"Fatal error with sysctl. Errno:"+str(get_ctypes_errno())+", Error: "+get_ctypes_error_str()
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/harshexit.py'...
***   File "./lib/python3.5/site-packages/repy_v1/harshexit.py", line 70
    raise UnsupportedSystemException, "Unsupported system type: '"+osrealtype+"' (alias: "+ostype+")"
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/linux_api.py'...
***   File "./lib/python3.5/site-packages/repy_v1/linux_api.py", line 126
    raise Exception, "Queried Process is a zombie (dead)!"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/namespace.py'...
***   File "./lib/python3.5/site-packages/repy_v1/namespace.py", line 1080
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/nanny.py'...
***   File "./lib/python3.5/site-packages/repy_v1/nanny.py", line 124
    raise Exception, "Resource '"+resource+"' limit set to 0, won't drain!"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/nmstatusinterface.py'...
***   File "./lib/python3.5/site-packages/repy_v1/nmstatusinterface.py", line 65
    raise Exception, "Stop file already exists! File:"+stopfile
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/nonportable.py'...
***   File "./lib/python3.5/site-packages/repy_v1/nonportable.py", line 119
    raise UnsupportedSystemException, "Unsupported system type: '"+osrealtype+"' (alias: "+ostype+")"
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/repy.py'...
***   File "./lib/python3.5/site-packages/repy_v1/repy.py", line 163
    except (OSError, IOError), e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/restrictions.py'...
***   File "./lib/python3.5/site-packages/repy_v1/restrictions.py", line 130
    raise ParseError, "Not enough tokens for 'arg'"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/safe.py'...
***   File "./lib/python3.5/site-packages/repy_v1/safe.py", line 318
    raise Exception, "Evaluation of code safety exceeded timeout threshold ("+str(nonportable.getruntime() - starttime)+" seconds)"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/safe_check.py'...
***   File "./lib/python3.5/site-packages/repy_v1/safe_check.py", line 56
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/statusstorage.py'...
***   File "./lib/python3.5/site-packages/repy_v1/statusstorage.py", line 72
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/tracebackrepy.py'...
***   File "./lib/python3.5/site-packages/repy_v1/tracebackrepy.py", line 216
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/virtual_namespace.py'...
***   File "./lib/python3.5/site-packages/repy_v1/virtual_namespace.py", line 63
    raise TypeError, "Code must be a string!"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v1/win_cpu_nanny.py'...
***   File "./lib/python3.5/site-packages/repy_v1/win_cpu_nanny.py", line 17
    print "Error, didn't get the right number of args:",sys.argv
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/repy_v1/windows_api.py'...
***   File "./lib/python3.5/site-packages/repy_v1/windows_api.py", line 70
    SYNCHRONIZE = 0x00100000L
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repy_v1-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
